変更：mode=1(キーボード)ではMODIFIERを文字列で指定する

--- a/hidsetter/revive_key.ini
+++ b/hidsetter/revive_key.ini
@@ -17,15 +17,12 @@
 ;
 ; MODE ==  1 ... keyboard
 ; VALUE ==  スキャンコード(usage) 2桁16進表記
-; MODIFIER == SHIFT,CTRL,ALT,WINの押下状態(8bit) 2桁16進表記
-;             bit 0 ... LEFT CTRL
-;             bit 1 ... LEFT SHIFT
-;             bit 2 ... LEFT ALT
-;             bit 3 ... LEFT GUI
-;             bit 4 ... RIGHT CTRL
-;             bit 5 ... RIGHT SHIFT
-;             bit 6 ... RIGHT ALT
-;             bit 7 ... RIGHT GUI
+;           HIDのusageを指定する。ASCIIコードとは異なる(参照: Universal Serial Bus HID Usage Tables, 10 Keyboard/Keypad Page (0x07))
+; MODIFIER == SHIFT,CTRL,ALT,WINの押下状態
+;             以下の語句を半角空白で区切った文字列
+;               LEFT_CTRL   LEFT_SHIFT   LEFT_ALT   LEFT_GUI
+;               RIGHT_CTRL  RIGHT_SHIFT  RIGHT_ALT  RIGHT_GUI
+;             (例) LEFT_CTRL LEFT_SHIFT ... 左CTRLキーと左SHIFTキーの同時押し
 ;
 ; MODE ==  2 ... joystick
 ; reviveUSBのファームウェアが間違ってるみたい
@@ -34,60 +31,60 @@
 
 [PIN1]
 MODE = 1
-VALUE = 04			; "a"
-MODIFIER = 00
+VALUE = 2B			; TAB
+MODIFIER =
 
 [PIN2]
 MODE = 1
-VALUE = 05			; "b"
-MODIFIER = 00
+VALUE = 2B			; TAB
+MODIFIER = RIGHT_SHIFT
 
 [PIN3]
-MODE = 1
-VALUE = 06			; "c"
-MODIFIER = 00
+MODE = 
+VALUE = 
+MODIFIER = 
 
 [PIN4]
-MODE = 1
-VALUE = 07			; "d"
-MODIFIER = 00
+MODE = 
+VALUE = 
+MODIFIER =
 
 [PIN5]
-MODE = 1
-VALUE = 08			; "e"
-MODIFIER = 00
+MODE = 
+VALUE = 
+MODIFIER =
 
 [PIN6]
-MODE = 1
-VALUE = 09			; "f"
-MODIFIER = 00
+MODE = 
+VALUE = 
+MODIFIER =
 
 [PIN7]
-MODE = 1
-VALUE = 04			; "a"
-MODIFIER = 00
+MODE = 
+VALUE = 
+MODIFIER =
 
 [PIN8]
-MODE = 1
-VALUE = 04			; "a"
-MODIFIER = 00
+MODE = 
+VALUE = 
+MODIFIER =
 
 [PIN9]
-MODE = 1
-VALUE = 04			; "a"
-MODIFIER = 00
+MODE = 
+VALUE = 
+MODIFIER =
 
 [PIN10]
-MODE = 1
-VALUE = 04			; "a"
-MODIFIER = 00
+MODE = 
+VALUE = 
+MODIFIER =
 
 [PIN11]
-MODE = 1
-VALUE = 04			; "a"
-MODIFIER = 00
+MODE = 
+VALUE = 
+MODIFIER =
 
 [PIN12]
-MODE = 1
-VALUE = 04			; "a"
-MODIFIER = 00
+MODE = 
+VALUE = 
+MODIFIER =
