--- a/hidsetter/hidsetter.vcxproj.filters
+++ b/hidsetter/hidsetter.vcxproj.filters
@@ -30,4 +30,7 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="revive_key.ini" />
+  </ItemGroup>
 </Project>
