テストファイル変更

--- a/hidsetter/revive_key.ini
+++ b/hidsetter/revive_key.ini
@@ -31,12 +31,12 @@
 
 [PIN1]
 MODE = 1
-VALUE = 2B			; TAB
+VALUE = 04			; a
 MODIFIER =
 
 [PIN2]
 MODE = 1
-VALUE = 2B			; TAB
+VALUE = 05			; b
 MODIFIER = RIGHT_SHIFT
 
 [PIN3]
